[gd_scene load_steps=2 format=3 uid="uid://colony_sim_main"]

[ext_resource type="Script" path="res://scripts/colonysim/colony_sim_ui.gd" id="1_ui"]

[node name="ColonySim" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ui")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.12, 0.06, 0.03, 1)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = 60.0
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "MARS COLONY"

[node name="PhaseLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Era: Survival"

[node name="Spacer" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="YearLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Year: 1"

[node name="PopulationLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Pop: 12"

[node name="StabilityLabel" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Stability: 75%"

[node name="MainContent" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 70.0
offset_right = -10.0
offset_bottom = -70.0
theme_override_constants/separation = 10

[node name="LeftPanel" type="VBoxContainer" parent="MainContent"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResourcePanel" type="Panel" parent="MainContent/LeftPanel"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2

[node name="Label" type="Label" parent="MainContent/LeftPanel/ResourcePanel"]
layout_mode = 1
offset_left = 10.0
offset_top = 8.0
offset_right = 150.0
offset_bottom = 28.0
text = "Resources"
theme_override_font_sizes/font_size = 16

[node name="ResourceContainer" type="VBoxContainer" parent="MainContent/LeftPanel/ResourcePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 35.0
offset_right = -10.0
offset_bottom = -10.0

[node name="BuildingPanel" type="Panel" parent="MainContent/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainContent/LeftPanel/BuildingPanel"]
layout_mode = 1
offset_left = 10.0
offset_top = 8.0
offset_right = 150.0
offset_bottom = 28.0
text = "Buildings"
theme_override_font_sizes/font_size = 16

[node name="BuildingList" type="ItemList" parent="MainContent/LeftPanel/BuildingPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 35.0
offset_right = -10.0
offset_bottom = -80.0

[node name="BuildButton" type="Button" parent="MainContent/LeftPanel/BuildingPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -70.0
offset_right = -10.0
offset_bottom = -40.0
text = "Build New..."

[node name="RepairButton" type="Button" parent="MainContent/LeftPanel/BuildingPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -35.0
offset_right = -10.0
offset_bottom = -5.0
text = "Repair Selected"

[node name="CenterPanel" type="VBoxContainer" parent="MainContent"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="PopulationPanel" type="Panel" parent="MainContent/CenterPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainContent/CenterPanel/PopulationPanel"]
layout_mode = 1
offset_left = 10.0
offset_top = 8.0
offset_right = 150.0
offset_bottom = 28.0
text = "Population"
theme_override_font_sizes/font_size = 16

[node name="TabContainer" type="TabContainer" parent="MainContent/CenterPanel/PopulationPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 35.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Colonists" type="VBoxContainer" parent="MainContent/CenterPanel/PopulationPanel/TabContainer"]
layout_mode = 2

[node name="ColonistScroll" type="ScrollContainer" parent="MainContent/CenterPanel/PopulationPanel/TabContainer/Colonists"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColonistContainer" type="VBoxContainer" parent="MainContent/CenterPanel/PopulationPanel/TabContainer/Colonists/ColonistScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Statistics" type="VBoxContainer" parent="MainContent/CenterPanel/PopulationPanel/TabContainer"]
layout_mode = 2

[node name="StatsLabel" type="RichTextLabel" parent="MainContent/CenterPanel/PopulationPanel/TabContainer/Statistics"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Population statistics..."

[node name="Politics" type="VBoxContainer" parent="MainContent/CenterPanel/PopulationPanel/TabContainer"]
layout_mode = 2

[node name="PoliticsLabel" type="RichTextLabel" parent="MainContent/CenterPanel/PopulationPanel/TabContainer/Politics"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Political overview..."

[node name="ElectionButton" type="Button" parent="MainContent/CenterPanel/PopulationPanel/TabContainer/Politics"]
layout_mode = 2
text = "Hold Election"

[node name="IndependenceButton" type="Button" parent="MainContent/CenterPanel/PopulationPanel/TabContainer/Politics"]
layout_mode = 2
text = "Independence Vote"

[node name="ProjectionPanel" type="Panel" parent="MainContent/CenterPanel"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="Label" type="Label" parent="MainContent/CenterPanel/ProjectionPanel"]
layout_mode = 1
offset_left = 10.0
offset_top = 8.0
offset_right = 200.0
offset_bottom = 28.0
text = "Next Year Projection"
theme_override_font_sizes/font_size = 16

[node name="ProjectionLabel" type="RichTextLabel" parent="MainContent/CenterPanel/ProjectionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 35.0
offset_right = -10.0
offset_bottom = -10.0
bbcode_enabled = true
text = "Production and consumption forecast..."

[node name="RightPanel" type="VBoxContainer" parent="MainContent"]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="EventPanel" type="Panel" parent="MainContent/RightPanel"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="Label" type="Label" parent="MainContent/RightPanel/EventPanel"]
layout_mode = 1
offset_left = 10.0
offset_top = 8.0
offset_right = 150.0
offset_bottom = 28.0
text = "Active Event"
theme_override_font_sizes/font_size = 16

[node name="EventTitle" type="Label" parent="MainContent/RightPanel/EventPanel"]
layout_mode = 1
offset_left = 10.0
offset_top = 35.0
offset_right = 310.0
offset_bottom = 55.0
text = "No active event"
theme_override_font_sizes/font_size = 14

[node name="EventDescription" type="RichTextLabel" parent="MainContent/RightPanel/EventPanel"]
layout_mode = 1
offset_left = 10.0
offset_top = 60.0
offset_right = 310.0
offset_bottom = 130.0
bbcode_enabled = true
text = "Events will appear here when they occur."

[node name="ChoiceContainer" type="VBoxContainer" parent="MainContent/RightPanel/EventPanel"]
layout_mode = 1
offset_left = 10.0
offset_top = 135.0
offset_right = 310.0
offset_bottom = 195.0

[node name="LogPanel" type="Panel" parent="MainContent/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MainContent/RightPanel/LogPanel"]
layout_mode = 1
offset_left = 10.0
offset_top = 8.0
offset_right = 150.0
offset_bottom = 28.0
text = "Colony Chronicle"
theme_override_font_sizes/font_size = 16

[node name="ColonyLog" type="RichTextLabel" parent="MainContent/RightPanel/LogPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 35.0
offset_right = -10.0
offset_bottom = -10.0
bbcode_enabled = true
scroll_following = true

[node name="BottomBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -10.0
theme_override_constants/separation = 20

[node name="WorkersButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Auto-Assign Workers"

[node name="Spacer" type="Control" parent="BottomBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AdvanceButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "+1 Year"

[node name="Advance5Button" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "+5 Years"

[node name="AutoButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
toggle_mode = true
text = "Auto"

[node name="SpeedSlider" type="HSlider" parent="BottomBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 2.0

[node name="SpeedLabel" type="Label" parent="BottomBar"]
layout_mode = 2
text = "2x"

[node name="SaveButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Save"

[node name="MenuButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Menu"

[node name="BuildDialog" type="Window" parent="."]
visible = false
title = "Construct Building"
position = Vector2i(100, 100)
size = Vector2i(400, 500)

[node name="VBoxContainer" type="VBoxContainer" parent="BuildDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Label" type="Label" parent="BuildDialog/VBoxContainer"]
layout_mode = 2
text = "Select building to construct:"
theme_override_font_sizes/font_size = 14

[node name="BuildTypeList" type="ItemList" parent="BuildDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CostLabel" type="Label" parent="BuildDialog/VBoxContainer"]
layout_mode = 2
text = "Cost: 50 materials, 10 power"

[node name="HBoxContainer" type="HBoxContainer" parent="BuildDialog/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CancelBuildButton" type="Button" parent="BuildDialog/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="ConfirmBuildButton" type="Button" parent="BuildDialog/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Build"

[node name="GameOverOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="GameOverOverlay/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "COLONY ENDED"
horizontal_alignment = 1

[node name="ReasonLabel" type="Label" parent="GameOverOverlay/VBoxContainer"]
layout_mode = 2
text = "The colony has fallen..."
horizontal_alignment = 1
autowrap_mode = 2

[node name="StatsLabel" type="Label" parent="GameOverOverlay/VBoxContainer"]
layout_mode = 2
text = "Years survived: 0\nPeak population: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverOverlay/VBoxContainer"]
layout_mode = 2
text = "Start New Colony"

[node name="MainMenuButton" type="Button" parent="GameOverOverlay/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
